# Personalized-Supplement-Recommender

./: .env.example  .gitattributes  .gitignore  .pdm-python  README.md  clean_prod_ingredients.py  delete_drugbank_data.py  drugbank_extraction_clean.ipynb  knowledge_graph_structure.md  load_all_data_OPTIMIZED.py  load_data.py  load_drugbank_data.py  load_drugbank_data_OPTIMIZED.py  load_mayo_clinic_data.py  mayo_clinic_supplements_raw.csv  medications.csv  pyproject.toml  resume_phase_789.py  scrape.ipynb  supplement_interactions.csv  supplement_medication_interacts_with.csv  supplement_treats.csv  supplements.csv  supplements_data.csv  test_knowledge_graph.py  treatments.csv
agent/: workflow_agent.py
cleaning scripts/: mayo_clinic.ipynb  supplement_side_effects.ipynb
csv_progression/: medication_nodes.csv  medication_to_drugbank_mapping_full.csv  side_effects.csv  supplement_interactions_cleaned.csv  supplement_medication_interacts_with_old.csv  supplements.csv  symptoms_list.csv  symptoms_supplements_details.csv
data/: raw_mayo_data.csv  scrape.ipynb  scrape.py  supplement_medication_interacts_with.csv  supplement_symptom_can_cause.csv  supplement_symptom_treats.csv  supplement_symptoms.csv  supplements.csv  supplements_data.csv  symptoms_data.csv
delete_data/: nodes.py  relationships.py
docs/: knowledge_graph_structure.md
drugbank_data/: drug_categories.csv  drug_category_belongs_to.csv  drug_food_interaction_has_food_interaction.csv  drug_synonyms.csv  food_interactions.csv  salts.csv  synonyms.csv  toxicity_contraindications.csv
scripts/: load_data.py  (+2 more)
(+49 files in other folders)
