[project]
name = "Personalized-Supplement-Recommender"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Parna Praveen", email = "parnapraveen912@gmail.com"},
]
dependencies = ["pandas>=2.3.3", "dotenv>=0.9.9", "neo4j>=6.1.0", "tqdm>=4.67.1", "langgraph>=1.0.7", "anthropic>=0.77.1"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.1",
]
lint = [
    "black>=23.12.1",
    "flake8>=7.0.0",
    "mypy>=1.7.1",
    "isort>=5.13.2",
]

[tool.pdm.scripts]
app = "streamlit run src/web/app.py"
load-data = "python scripts/load_data.py"
quickstart = "python scripts/quickstart.py"
test = "pytest tests/ -v"
format = {shell = "black . && isort ."}
lint = {shell = "flake8 . && mypy ."}
langgraph = {shell = "langgraph dev --config langgraph-studio/langgraph.json"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "__pypackages__/",
    ".pdm-build/",
    "build/",
    "dist/",
]
